# starfire-cli

./: Cargo.toml  LICENSE  README.md
src/: auth.rs  cf_dns.rs  cli.rs  config.rs  errors.rs  main.rs  registry.rs  runner.rs  skill.rs
