[package]
name = "starfire"
version = "0.2.0"
edition = "2024"
description = "CLI router and tool manager — manage API keys and run CLI tools with credentials automatically injected"
license = "MIT"
repository = "https://github.com/ethereumdegen/starfire-cli"
homepage = "https://github.com/ethereumdegen/starfire-cli"
readme = "README.md"
keywords = ["cli", "credentials", "devtools", "api-keys", "cloud"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
